--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,25 @@
-plugins {
-  //inlude the nodeJS plugin to execute nodejs and npm tasks
-  id "com.moowork.node" version "1.3.1"
+abstract class GreetingTask extends DefaultTask {
+    @Input
+    abstract Property<String> getGreeting()
+
+    GreetingTask() {
+        greeting.convention('hello from GreetingTask')
+    }
+
+    @TaskAction
+    def greet() {
+        println greeting.get()
+    }
 }
 
-node {
-	download = true
-	version = "9.11.1"
-	npmVersion = "^5.6.0"
+// Use the default greeting
+tasks.register('hello', GreetingTask)
+
+// Customize the greeting
+tasks.register('greeting',GreetingTask) {
+    greeting = 'greetings from GreetingTask'
 }
 
-//declare a build task
-task build
-build.dependsOn nodeSetup
-npm_test.dependsOn nodeSetup
-//declare a task to create a zip of the app
 task zip(type: Zip) {
 	from ('.') {
 		include "*"
@@ -27,7 +33,3 @@ task zip(type: Zip) {
 	destinationDir(file("dist"))
 	baseName "trainSchedule"
 }
-
-//declare task dependencies
-build.dependsOn nodeSetup
-zip.dependsOn nodeSetup
