--- a/build.gradle
+++ b/build.gradle
@@ -20,16 +20,7 @@ tasks.register('greeting',GreetingTask) {
     greeting = 'greetings from GreetingTask'
 }
 
-task zip(type: Zip) {
-	from ('.') {
-		include "*"
-		include "bin/**"
-		include "data/**"
-		include "node_modules/**"
-		include "public/**"
-		include "routes/**"
-		include "views/**"
-	}
-	destinationDir(file("dist"))
-	baseName "trainSchedule"
+tasks.register('copyReport', Copy) {
+    from layout.buildDirectory.file("reports/my-report.pdf")
+    into layout.buildDirectory.dir("toArchive")
 }
